# hhh-graphs-service

./: .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  README.md  coverage.xml  pyproject.toml
.claude/: CLAUDE.md
.github/instructions/: bug-history.instructions.md  copilot.instructions.md
.github/workflows/: pr-title.yml
src/: main.py
src/application/ports/inbound/: graph_service.py  import_event_subscriber.py
src/application/ports/outbound/: graph_repository.py  maps_client.py
src/application/services/: graph_service_impl.py
src/domain/exceptions/: graph_exceptions.py
src/domain/models/: cross_system_result.py  graph.py
src/domain/services/: graph_hasher.py  system_path_finder.py  tree_builder.py
src/infrastructure/adapters/inbound/api/: graph_api_mapper.py  graph_dto.py  graph_router.py
src/infrastructure/adapters/inbound/events/: graph_stale_handler.py  (+1 more)
src/infrastructure/config/: dependencies.py  settings.py
tests/: auth_helpers.py
tests/integration/: conftest.py  test_graph_api.py  test_graph_generation.py  test_indexes.py
tests/unit/application/: test_graph_service_impl.py
tests/unit/domain/services/: test_graph_hasher.py  test_system_path_finder.py  test_tree_builder.py
tests/unit/infrastructure/: test_cache_control.py  test_dependencies.py  test_graph_router_auth.py  test_graph_router_generate.py  test_main.py
tests/unit/infrastructure/events/: test_mongo_import_event_subscriber.py
tests/unit/infrastructure/http/: test_maps_client_impl.py
tests/unit/infrastructure/persistence/: test_mongo_graph_repository.py
(+3 files in other folders)
