[project]
name = "hhh-graphs-service"
version = "0.1.0"
description = "Graph and connectivity management for H³ – Hexadian Hauling Helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "opyoid>=0.6,<3.0",
    "pymongo>=4.12",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "cachetools>=7.0.5",
    "hexadian-auth-common[fastapi]",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
    "ruff>=0.9",
    "testcontainers[mongodb]>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
hexadian-auth-common = { git = "https://github.com/Hexadian-Corporation/hexadian-auth-common.git" }
